plugins {
    id 'application'
}
dependencies {
    implementation project(':celestia')
    compileOnly "org.jetbrains:annotations:+"
}
application {
    mainModule = "net.voidgroup.celestia.example"
    mainClass = "net.voidgroup.celestia.example.Example"
}
compileJava {
    options.compilerArgs << '--enable-preview' << '-Xlint:-preview'
}
application {
    applicationDefaultJvmArgs = ['--enable-preview', '--enable-native-access=net.voidgroup.celestia.unsafe']
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}